guardado y manejo de settings

--- a/backend/settingsData.json
+++ b/backend/settingsData.json
@@ -5,9 +5,9 @@
   "colorSecundario": "#8f2299",
   "tamaFuenteParrafos": "16",
   "tamaFuenteTitulos": "32",
-  "tamaFuenteSubtitulos": "24",
-  "tipoPrincipal": "",
-  "tipoSecundaria": "",
+  "tamaFuenteSubtitulos": 33,
+  "tipoPrincipal": "C:\\fakepath\\Little Days Alt.ttf",
+  "tipoSecundaria": "C:\\fakepath\\Little days.ttf",
   "primaryFontFile": null,
   "secondaryFontFile": null,
   "primaryFontName": "",
