Correccion del guardado de configuraciones, ahora nunca en la vida se va a sobreescribir

--- a/backend/settingsDatas/settingsData3.json
+++ b/backend/settingsDatas/settingsData3.json
@@ -6,6 +6,6 @@
   "tamaFuenteParrafos": 14,
   "tamaFuenteTitulos": 33,
   "tamaFuenteSubtitulos": 22,
-  "primaryFontName": "arial",
+  "primaryFontName": "Times New Roman",
   "secondaryFontName": "Times New Roman"
 }
