--- a/backend/settingsDatas/settingsData1.json
+++ b/backend/settingsDatas/settingsData1.json
@@ -1,11 +1,12 @@
 {
-  "colorTexto": "#fe0b0b",
-  "colorFondo": "#ffffff",
-  "colorPrimario": "#e1ff00",
-  "colorSecundario": "#9ddde1",
-  "tamaFuenteParrafos": 14,
-  "tamaFuenteTitulos": 33,
-  "tamaFuenteSubtitulos": 22,
-  "primaryFontName": "arial",
-  "secondaryFontName": "Times New Roman"
+  "nombre": "protanopia",
+  "colorTexto": "#fbff00",
+  "colorFondo": "#1100ff",
+  "colorPrimario": "#00ff04",
+  "colorSecundario": "#850094",
+  "tamaFuenteParrafos": "16",
+  "tamaFuenteTitulos": "32",
+  "tamaFuenteSubtitulos": "24",
+  "primaryFontName": "",
+  "secondaryFontName": ""
 }
